# gpui-html

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  SKILL.md
crates/gpui-html/: Cargo.toml
crates/gpui-html-core/: Cargo.toml
crates/gpui-html-core/src/: ast.rs  class_map.rs  codegen.rs  css.rs  diagnostic.rs  lib.rs  manifest.rs  parse.rs
crates/gpui-html-core/tests/: ato_desktop_preview_fixture.rs
crates/gpui-html/src/: main.rs
crates/gpui-rsx/: Cargo.toml
crates/gpui-rsx/src/: ast.rs  lib.rs
docs/: spec.md
examples/: ato-desktop-preview.expected.gpui.txt  ato-desktop-preview.gpui.html  ato-desktop-preview.gpui.html.sha256  example.manifest.toml  hello.html
