[workspace]
resolver = "2"
members = [
    "crates/gpui-rsx",
    "crates/gpui-html",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ato-run/gpui-html"
homepage = "https://github.com/ato-run/gpui-html"
authors = ["ato-run"]

[workspace.dependencies]
gpui-rsx = { path = "crates/gpui-rsx", version = "0.0.0" }
