[workspace]
resolver = "2"
members = [
    "crates/gpui-html-core",
    "crates/gpui-html",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ato-run/gpui-html"
homepage = "https://github.com/ato-run/gpui-html"
authors = ["ato-run"]

[workspace.dependencies]
gpui-html-core = { path = "crates/gpui-html-core", version = "0.0.0" }
