[package]
name = "gpui-html-core"
description = "Parser, IR, and code generator for the gpuiHTML spec — emits gpui builder code from HTML."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8", default-features = false, features = ["parse"] }
