[package]
name = "gpui-html"
description = "CLI that compiles gpuiHTML source into gpui builder Rust code."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "gpui-html"
path = "src/main.rs"

[dependencies]
gpui-html-core.workspace = true
clap.workspace = true
serde_json.workspace = true
